# Saturnity

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  LICENSE.txt  Makefile  README.md  SECURITY.md  _abstract_client_8hpp_source.html  _abstract_connection_8hpp_source.html  _abstract_packet_8hpp_source.html  _abstract_server_8hpp_source.html  _abstract_u_d_p_protocol_8hpp_source.html  _byte_buffer_8hpp_source.html  _connection_to_client_8hpp_source.html  _connection_to_server_8hpp_source.html  _core_8hpp_source.html  _exceptions_8hpp_source.html  _packet_reader_8hpp_source.html  _packet_registry_8hpp_source.html  _packet_writer_8hpp_source.html  _saturnity_8hpp.html  _saturnity_8hpp__incl.map  _saturnity_8hpp__incl.md5  _saturnity_8hpp_source.html  _t_c_p_client_8hpp_source.html  _t_c_p_connection_to_client_8hpp_source.html  _t_c_p_server_8hpp_source.html  _thread_safe_queue_8hpp_source.html  _u_d_p_client_8hpp_source.html  _u_d_p_connection_to_client_8hpp_source.html  _u_d_p_server_8hpp_source.html  annotated.html  annotated_dup.js  classes.html  classsa_1_1_abstract_client.html  (+326 more)
.github/: Dockerfile  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  ✨feature-request.md  ❓question.md  🐛-bug-report.md
.github/workflows/: build.yml  doxygen.yml  installer.yml  linter.yml  tests.yml
assets/: convert.bat
cmake/: CPackConfig.cmake  FindBoost.cmake  FindSFML.cmake  Findspdlog.cmake  boost.template.in  boost.utils.cmake
cmake/cpack/: CPackDEB.cmake  CPackNSIS.cmake  CPackRPM.cmake
docs/: Doxyfile
docs/doxygen-awesome-css/: header.html
include/: ByteBuffer.hpp  Core.hpp  Saturnity.hpp  client.hpp  comm.pb.h  server.hpp
include/packets/: packets.hpp
include/saturnity/: Exceptions.hpp  Saturnity.hpp
include/saturnity/asio/tcp/: TCPClient.hpp  TCPConnectionToClient.hpp  TCPServer.hpp
include/saturnity/asio/udp/: AbstractUDPProtocol.hpp  UDPClient.hpp  UDPConnectionToClient.hpp  UDPServer.hpp  client.hpp  server.hpp
include/saturnity/asio/udp/packets/: packets.hpp
include/saturnity/core/: AbstractPacket.hpp  ByteBuffer.hpp  Core.hpp  PacketReader.hpp  PacketRegistry.hpp  PacketWriter.hpp  ThreadSafeQueue.hpp
include/saturnity/core/network/: AbstractClient.hpp  AbstractConnection.hpp  AbstractServer.hpp  ConnectionToClient.hpp  ConnectionToServer.hpp
include/saturnity/core/network/client/: AbstractClient.hpp  ConnectionToServer.hpp
include/saturnity/core/network/server/: AbstractServer.hpp  ConnectionToClient.hpp
include/saturnity/core/packet/: AbstractPacket.hpp  PacketRegistry.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  functions_0.js  functions_1.js  functions_11.js  (+28 more)
src/: ByteBuffer.cpp  CMakeLists.txt  Saturnity.cpp  client.cpp  main.cpp  main.h  server.cpp  tcpserver.cpp  udpserver.cpp
src/asio/udp/: client.cpp  server.cpp
src/core/: ByteBuffer.cpp  PacketReader.cpp  PacketRegistry.cpp  PacketWriter.cpp
src/core/asio/tcp/: TCPClient.cpp  TCPConnectionToClient.cpp  TCPServer.cpp
src/core/asio/udp/: UDPClient.cpp  UDPConnectionToClient.cpp  UDPServer.cpp
src/core/network/: ConnectionToClient.cpp  ConnectionToServer.cpp
src/packets/: packets.cpp
tests/: CMakeLists.txt  MainTest.cpp  main_test.cpp
tests/binary/: TestEncoding.cpp
tests/buffer/: TestByteBuffer.cpp  TestByteBufferUtils.cpp  TestConstructorByteBuffer.cpp  TestReadWriteByteBuffer.cpp
tests/packet/: TestPacketRegistry.cpp
